src/test/ui/const-generics/issues/issue-72819-generic-in-const-eval.min.stderr
error: generic parameters may not be used in const operations
  --> $DIR/issue-72819-generic-in-const-eval.rs:8:17
   |
LL | where Assert::<{N < usize::MAX / 2}>: IsTrue,
   |                 ^ cannot perform const operation using `N`
   |
   = help: const parameters may only be used as standalone arguments, i.e. `N`
   = help: use `#![feature(const_generics)]` and `#![feature(const_evaluatable_checked)]` to allow generic const expressions

error: aborting due to previous error

